...
                                        <rect key="frame" x="0.0" y="387" width="414" height="43.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2hs-qk-Ce0" id="gTs-6c-K9O">
                                            <rect key="frame" x="0.0" y="0.0" width="384.5" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Logins" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="OKQ-A2-VlH">
                                                    <rect key="frame" x="20" y="0.0" width="356.5" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                        <rect key="frame" x="0.0" y="430.5" width="414" height="43.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0vJ-z5-h9K" id="JZV-1n-BXp">
                                            <rect key="frame" x="0.0" y="0.0" width="384.5" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="48C-mG-5bC">
                                                    <rect key="frame" x="20" y="0.0" width="356.5" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="fBm-m7-gkF" id="04d-GF-o2u"/>
                            <outlet property="delegate" destination="fBm-m7-gkF" id="bNM-RB-KdR"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="c3P-Xr-Jdq"/>
                    <navigationItem key="navigationItem" id="86a-lc-Rdt">
                        <nil key="title"/>
                        <view key="titleView" opaque="NO" contentMode="scaleToFill" id="NbE-Qk-XNr">
                            <rect key="frame" x="207" y="22" width="0.0" height="0.0"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <subviews>
...
