...
            </objects>
            <point key="canvasLocation" x="250" y="-209"/>
        </scene>
        <!--Albums-->
        <scene sceneID="mEd-5r-ZqJ">
            <objects>
                <viewControllerPlaceholder storyboardName="Albums" id="Ewl-E2-JJv" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="whN-FF-gKD"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="mTM-ov-Vja" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="252" y="-14"/>
        </scene>
...
